--- a/src/components/Circle/style.css
+++ b/src/components/Circle/style.css
@@ -1,12 +1,35 @@
 .circle {
   width: 40px;
   height: 40px;
-  border-radius: 50%;
-  box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.2);
+  display: flex;
+  justify-content: center;
+  align-items: center;
   cursor: pointer;
-  transition: all 0.2s ease-in;
+  display: none;
 }
 
-.circle:hover {
-  transform: scale(1.2);
+.circle svg {
+  width: 100%;
+  height: 100%;
+  animation: enter 0.5s ease-in-out;
+}
+
+@keyframes enter {
+  from {
+    opacity: 0;
+    -webkit-transform: scale3d(0.3, 0.3, 0.3);
+    transform: scale3d(0.3, 0.3, 0.3);
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@-webkit-keyframes enter {
+  from {
+    transform: scale(0);
+  }
+  to {
+    transform: scale(1);
+  }
 }
