--- a/src/index.css
+++ b/src/index.css
@@ -68,13 +68,15 @@ h2 {
   font-size: 120px;
   text-align: center;
 }
-.title span {
-  margin: 0 6px;
+.title svg {
+  width: 100px;
+  height: 120px;
   line-height: 120px;
   cursor: pointer;
+  transition: all 0.3s ease;
 }
-.title span:hover {
-  transform: rotateY(360deg);
+.title svg:hover {
+  transform: rotateY(180deg);
 }
 .color-card {
   flex: 1;
