--- a/src/components/Title/style.less
+++ b/src/components/Title/style.less
@@ -9,8 +9,8 @@
     height: 70px;
     line-height: 120px;
     cursor: pointer;
-    transition: all 0.3s ease;
-    animation: show 0.5s ease-in-out;
+    transition: all 0.3s cubic-bezier(0.25, 0.46, 0.45, 0.94);
+    animation: show 0.5s cubic-bezier(0.23, 1, 0.32, 1);
 
     &:last-child {
       margin-right: 0;
@@ -20,12 +20,15 @@
     }
   }
 }
-@var: `Math.random() `;
+
 @keyframes show {
-  from {
-    transform: scale(@var);
+  0 {
+    transform: scale(0);
   }
-  to {
+  50% {
+    transform: scale(2);
+  }
+  100% {
     transform: scale(1);
   }
 }
