--- a/src/index.less
+++ b/src/index.less
@@ -46,6 +46,14 @@ body,
       width: 500px;
       margin: 0 auto;
 
+      .animate {
+        animation: up 0.5s ease-in-out 1;
+
+        &.active {
+          animation: activeUp 0.5s ease-in-out 1;
+        }
+      }
+
       div {
         position: absolute;
         top: 155px;
@@ -54,7 +62,7 @@ body,
         transform: rotate(45deg);
         cursor: pointer;
         transition: all 0.2s ease-in-out;
-        animation: up 0.5s ease-in-out;
+        box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
 
         &:hover {
           top: 142px;
@@ -66,7 +74,6 @@ body,
           top: 142px;
           width: 150px;
           height: 150px;
-          animation: activeUp 0.5s ease-in-out;
         }
       }
 
