--- a/src/index.less
+++ b/src/index.less
@@ -34,7 +34,7 @@ body,
   }
 
   &-drawer {
-    width: 58.3%;
+    width: 552px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -46,18 +46,5 @@ body,
       width: 500px;
       margin: 0 auto;
     }
-  }
-}
-
-@media only screen and (max-width: 1024px) {
-  .wrapper {
-    flex-direction: column-reverse;
-  }
-}
-
-@media only screen and (max-width: 768px) {
-  .wrapper {
-    width: 90%;
-    flex-direction: column-reverse;
   }
 }
