--- a/src/components/cardGroup/style.less
+++ b/src/components/cardGroup/style.less
@@ -8,7 +8,7 @@
   transition: all 0.2s ease-in-out;
   box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
 
-  &.animate {
+  &.enter-active {
     animation: up 0.5s ease-in-out;
   }
   
@@ -23,36 +23,38 @@
     width: 150px;
     height: 150px;
    
-    &.animate {
+    &.enter-active {
       animation: activeUp 0.5s ease-in-out;
     }
   }
-}
 
-.enter {
-  display: block;
-}
+  &:nth-child(2) {
+    left: var(--dis);
+  }
 
-.orange {
-left: var(--dis);
-}
-.yellow {
-  left: calc(var(--dis) * 2);
-}
-.green {
-  left: calc(var(--dis) * 3);
-}
-.cyanblue {
-  left: calc(var(--dis) * 4);
-}
-.blue {
-  left: calc(var(--dis) * 5);
-}
-.purple {
-  left: calc(var(--dis) * 6);
-}
-.grey {
-  left: calc(var(--dis) * 7);
+  &:nth-child(3) {
+    left: calc(var(--dis) * 2);
+  }
+
+  &:nth-child(4) {
+    left: calc(var(--dis) * 3);
+  }
+
+  &:nth-child(5) {
+    left: calc(var(--dis) * 4);
+  }
+
+  &:nth-child(6) {
+    left: calc(var(--dis) * 5);
+  }
+
+  &:nth-child(7) {
+    left: calc(var(--dis) * 6);
+  }
+
+  &:nth-child(8) {
+    left: calc(var(--dis) * 7);
+  }
 }
 
 @keyframes up {
