--- a/src/components/circleGroup/style.less
+++ b/src/components/circleGroup/style.less
@@ -3,6 +3,10 @@
   height: 100%;
   position: relative;
 
+  &.enter-active {
+    animation: enter 0.5s cubic-bezier(0.215, 0.61, 0.355, 1);
+  }
+
   .desc {
     display: none;
     width: 66px;
@@ -39,7 +43,6 @@
     width: 100%;
     height: 100%;
     transition: all 0.2s cubic-bezier(0.165, 0.84, 0.44, 1);
-    animation: enter 0.5s cubic-bezier(0.215, 0.61, 0.355, 1);
 
     &:hover {
       transform: scale(1.2);
